improved CSS and fixed Java Serial output
Work has been done on the front end for appearance, and some limited
functionality. A lot more needs to be done, but progress is being made.

DCCSerialCom class has been rewritten and now works perfectly.

--- a/PiRailStyle.css
+++ b/PiRailStyle.css
@@ -1,5 +1,6 @@
 .html {
-	height: 100%; 
+	height: 100%;
+	width: 100%;
 }
 
 .tabs {
@@ -12,7 +13,6 @@
         clear:both;
         content:'';
 }
-
 
 /*changes position*/
 .tab-links li {
@@ -35,10 +35,27 @@
 
 /*title self explanatory. Change this stuff. Box is not needed.*/
 .tab-content {
-        padding:15px;
+		padding:15px;
         border-radius:3px;
         box-shadow:-1px 1px 1px rgba(0,0,0,0.15);
         background:#fff;
+		background-color: lightblue;
+}
+
+/*After this point I actually know what I'm doing*/
+
+.value {
+	border:2px solid #456879;
+	border-radius:10px;
+	height: 22px;
+	width: 230px;
+}
+
+.button {
+	text-align: center;
+	border: 2px solid;
+	border-radius: 2px;
+	border-color: white;
 }
 
 .tab {
@@ -47,4 +64,23 @@
 
 .tab.active {
     display:block;
+}
+
+.extra {
+	padding: 10px 32px;
+	font-size: 16px;
+	width: 170px;
+	height: 40px;
+}
+
+.number {
+	font-size: 16px;
+	color: white;
+	background-color: black;
+	height: 40px;
+	width: 40px;
+}
+
+.stop {
+	background-color: red;
 }
