--- a/PiRailStyle.css
+++ b/PiRailStyle.css
@@ -1,3 +1,9 @@
+.html, body {
+	width: 700px ;
+	margin-left: auto ;
+	margin-right: auto ;
+}
+
 .tabs {
     position: relative;   
     min-height: 500px; 
@@ -19,7 +25,7 @@
 }
 	
 .tab [type=radio] {
-    display: none;   
+    display: none;
 }
 	
 .content {
@@ -41,4 +47,44 @@
 	
 [type=radio]:checked ~ label ~ .content {
     z-index: 1;
+}
+
+.value {
+	border:2px solid #456879;
+	border-radius:10px;
+	height: 22px;
+	width: 230px;
+	text-align: center;
+}
+
+.button {
+	text-align: center;
+	border: 2px solid;
+	border-radius: 2px;
+	border-color: white;
+}
+
+.extra {
+	padding: 10px 32px;
+	font-size: 16px;
+	width: 170px;
+	height: 40px;
+}
+
+.info {
+	background-color: lightblue;
+	border: 0px;
+	text-align: left;
+}
+
+.number {
+	font-size: 16px;
+	color: white;
+	background-color: black;
+	height: 40px;
+	width: 40px;
+}
+
+.stop {
+	background-color: red;
 }
