--- a/PiRailStyle.css
+++ b/PiRailStyle.css
@@ -21,7 +21,7 @@
     border: 1px solid #ccc; 
     margin-left: -1px; 
     position: relative;
-    left: 1px; 
+    left: 40px; 
 }
 	
 .tab [type=radio] {
@@ -53,20 +53,115 @@
 	position: absolute;
 	left: 10px;
 	top: 20px;
+	width: 260px;
+}
+
+.info {
+	position: absolute;
+	left: 260px;
+	top: 0px;
+	width: 260px;
+}
+
+.col1 {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	width: 130px;
+	height: 110px;
+}
+
+.col2 {
+	position: absolute;
+	top: 0px;
+	left: 130px;
+	width: 130px;
+	height: 110px;
+}
+
+.infodisplay {
+	border: 0px;
+	text-align: left;
+	width: 40px;
+	background-color: blue;
+}
+
+.speed {
+	position: absolute;
+	top: 30px;
+	left: 10px;
+	font-size: 16px;
+}
+
+.speedlabel {
+	position: absolute;
+	margin: 0px;
+	top: 10px;
+	left: 10px;
+	font-size: 16px;
+}
+
+.address {
+	position: absolute;
+	top: 80px;
+	left: 10px;
+	font-size: 16px;
+}
+
+.addresslabel {
+	position: absolute;
+	margin: 0px;
+	top: 60px;
+	left: 10px;
+	font-size: 16px;
+}
+
+.acceleration {
+	position: absolute;
+	top: 30px;
+	left: 10px;
+	font-size: 16px;
+}
+
+.accelerationlabel {
+	position: absolute;
+	margin: 0px;
+	top: 10px;
+	left: 10px;
+	font-size: 16px;
+}
+
+.deceleration {
+	position: absolute;
+	top: 80px;
+	left: 10px;
+	font-size: 16px;
+}
+
+.decelerationlabel {
+	position: absolute;
+	position: absolute;
+	margin: 0px;
+	top: 60px;
+	left: 10px;
+	font-size: 16px;
 }
 
 .direction {
 	background-color: black;
-}
-
-.direction, active {
-	background-color: yellow;
+	color: white;
+	height: 40px;
+	width: 40px;
+	border-radius: 8px;
+	font-size: 16px;
 }
 
 .control {
 	position: absolute;
 	left: 260px;
-	top: 20px;
+	top: 110px;
+	width: 260px;
+	height: 240px;
 }
 
 .value {
@@ -75,28 +170,22 @@
 	height: 22px;
 	width: 230px;
 	text-align: center;
+	font-size: 20px;
 }
 
 .button {
 	text-align: center;
 	border: 2px solid;
-	border-radius: 2px;
+	border-radius: 4px;
 	border-color: white;
 }
 
 .extra {
-	padding: 10px 32px;
 	font-size: 16px;
 	width: 100px;
 	height: 40px;
 	text-align: center;
 	background-color: yellow;
-}
-
-.info {
-	background-color: blue;
-	border: 0px;
-	text-align: left;
 }
 
 .number {
@@ -105,21 +194,72 @@
 	background-color: black;
 	height: 40px;
 	width: 40px;
+	border-radius: 4px;
+}
+
+.displaybutton {
+	font-size: 16px;
+	width: 114px;
+	height: 40px;
+}
+
+.enter {
+	background-color: green;
+}
+
+input[type=range] {
+	-webkit-appearance: slider-vertical;
+	width: 140px;
+}
+
+.submenu {
+	height: 40px;
+	width: 260px;
+	position: absolute;
+	left: 520px;
+	bottom: 0px;
+}
+
+.submenubutton {
+	height: 40px;
+	width: 65px;
+	font-size: 20px;
+}
+
+.save {
+	position: absolute;
+	bottom: 0px;
+	left: 65px;
+}
+
+.add {
+	position: absolute;
+	bottom: 0px;
+	left: 130px;
+}
+
+.remove {
+	position: absolute;
+	bottom: 0px;
+	left: 195px;
 }
 
 .stop {
 	background-color: red;
+	font-size: 20px;
 	height: 40px;
-	width: 100px;
+	width: 65px;
 	position: absolute;
-	bottom: 40px;
-	
+	bottom: 0px;
+	left: 0px;
 }
 
 .menu {
 	position: absolute;
+	top: 0px;
 	left: 520px;
 	width: 260px;
-	height: 340px;
-	overflow:scroll;
+	height: 310px;
+	overflow:hidden;
+	background-color: #BDBDBD;
 }
